[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player1.gd" type="Script" id=1]
[ext_resource path="res://Player/Player2.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Game.gd" type="Script" id=5]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=6]
[ext_resource path="res://PauseMenu/PauseMenu.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 176, 1.2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 80 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Environment" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Environment"]
margin_right = 320.0
margin_bottom = 160.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Walls" type="StaticBody2D" parent="Environment"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Walls"]
position = Vector2( 160, -1.2 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Environment/Walls"]
position = Vector2( 159.375, 160 )
shape = SubResource( 1 )

[node name="Line" type="Node2D" parent="Environment"]
position = Vector2( 158, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Environment/Line"]
position = Vector2( 1.5, -0.75 )
scale = Vector2( 0.5, 0.916667 )
polygon = PoolVector2Array( 0, 3, 2, 3, 2, 15, 2, 27, 0, 27 )

[node name="Polygon2D2" type="Polygon2D" parent="Environment/Line"]
position = Vector2( 1.5, 24 )
scale = Vector2( 0.5, 0.916667 )
polygon = PoolVector2Array( 0, 3, 2, 3, 2, 15, 2, 27, 0, 27 )

[node name="Polygon2D3" type="Polygon2D" parent="Environment/Line"]
position = Vector2( 1.5, 49 )
scale = Vector2( 0.5, 0.916667 )
polygon = PoolVector2Array( 0, 3, 2, 3, 2, 15, 2, 20.1439, 2, 27, 0, 27 )

[node name="Polygon2D4" type="Polygon2D" parent="Environment/Line"]
position = Vector2( 1.5, 75 )
scale = Vector2( 0.5, 0.916667 )
polygon = PoolVector2Array( 0, 3, 2, 3, 2, 15, 2, 20.1439, 2, 22.5335, 2, 27, 0, 27 )

[node name="Polygon2D5" type="Polygon2D" parent="Environment/Line"]
position = Vector2( 1.5, 103 )
scale = Vector2( 0.5, 0.916667 )
polygon = PoolVector2Array( 0, 3, 2, 3, 2, 15, 2, 20.1439, 2, 22.5335, 2, 27, 0, 27 )

[node name="Polygon2D6" type="Polygon2D" parent="Environment/Line"]
position = Vector2( 1.5, 130 )
scale = Vector2( 0.5, 0.916667 )
polygon = PoolVector2Array( 0, 3, 2, 3, 2, 15, 2, 20.1439, 2, 22.5335, 2, 27, 0, 27, 0, 25.0392 )

[node name="Goals" type="Node2D" parent="Environment"]

[node name="Player2Goal" type="Area2D" parent="Environment/Goals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Goals/Player2Goal"]
position = Vector2( -5, 80 )
shape = SubResource( 2 )

[node name="Player1Goal" type="Area2D" parent="Environment/Goals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Goals/Player1Goal"]
position = Vector2( 325, 79 )
shape = SubResource( 2 )

[node name="Playre2" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 80 )
script = ExtResource( 2 )

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 304, 80 )
script = ExtResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 158, 82 )

[node name="UI" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 160.0
theme = ExtResource( 6 )

[node name="Player1Score" type="Label" parent="UI"]
margin_left = 256.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 30.0
text = "0"
align = 1

[node name="Player2Score" type="Label" parent="UI"]
margin_left = 32.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 30.0
text = "0"
align = 1

[node name="GoalLabel" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/GoalLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0
margin_top = 44.0
margin_right = 204.0
margin_bottom = 76.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="Label" type="Label" parent="UI/GoalLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 87.0
margin_top = 49.0
margin_right = 191.0
margin_bottom = 69.0
text = "GOAL!!!!"

[node name="PauseMenu" parent="UI" instance=ExtResource( 7 )]

[connection signal="body_entered" from="Environment/Goals/Player2Goal" to="." method="_on_Player2Goal_body_entered"]
[connection signal="body_entered" from="Environment/Goals/Player1Goal" to="." method="_on_Player1Goal_body_entered"]
